--- a/module-1/lab-web-scraping/your-code/main.ipynb
+++ b/module-1/lab-web-scraping/your-code/main.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +573,7 @@
    "source": [
     "#your code\n",
     "res = req.get(url1)\n",
-    "soup = BeautifulSoup(res.text, 'html.parser')\n",
+    "soup = BeautifulSoup(res.text, 'lxml')\n",
     "for link in soup.find_all(\"a\", href=True):\n",
     "    print(link[\"href\"])"
    ]
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,16 +597,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 223,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#res = req.get(url)\n",
+    "#soup = BeautifulSoup(res.text, 'html.parser')\n",
+    "#devs = soup.select(\"h1.h3 a\")\n",
+    "\n",
+    "#for e in devs:\n",
+    " #   print(e.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 224,
    "metadata": {},
    "outputs": [],
    "source": [
     "#your code\n",
     "res = req.get(url)\n",
-    "soup = BeautifulSoup(res.text, 'lxml')\n",
-    "titles = soup.select(\"h3 a\")\n",
+    "soup = BeautifulSoup(res.text, 'html.parser')\n",
+    "titles = soup.select(\"uscitem. #us/usc/t3\")\n",
     "for e in titles:\n",
-    "    print(e.text)"
+    "    print(e.text)\n",
+    "    \n",
+    "    #us/usc/t3\".uscitem"
    ]
   },
   {
@@ -618,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -628,11 +644,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 226,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "JASON DEREK BROWN\n",
+      "RAFAEL CARO-QUINTERO\n",
+      "ALEXIS FLORES\n",
+      "EUGENE PALMER\n",
+      "SANTIAGO VILLALBA MEDEROS\n",
+      "ROBERT WILLIAM FISHER\n",
+      "BHADRESHKUMAR CHETANBHAI PATEL\n",
+      "ARNOLDO JIMENEZ\n",
+      "ALEJANDRO ROSALES CASTILLO\n",
+      "YASER ABDEL SAID\n"
+     ]
+    }
+   ],
    "source": [
-    "#your code "
+    "#your code \n",
+    "res = req.get(url)\n",
+    "soup = BeautifulSoup(res.text, 'html.parser')\n",
+    "devs = soup.select(\"h3 a\")\n",
+    "for e in devs:\n",
+    "    print(e.text)"
    ]
   },
   {
@@ -644,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,11 +692,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code"
+    "#your code\n",
+    "res = req.get(url)\n",
+    "soup = BeautifulSoup(res.text, 'html.parser')\n",
+    "devs = soup.select(\"tadev0 td\")\n",
+    "for e in devs:\n",
+    "    print(e.text)"
    ]
   },
   {
@@ -670,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -680,11 +723,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code"
+    "#your code\n",
+    "res = req.get(url)\n",
+    "soup = BeautifulSoup(res.text, 'html.parser')\n",
+    "devs = soup.select(\".card box-shadow\")\n",
+    "for e in devs:\n",
+    "    print(e.text)"
    ]
   },
   {
