--- a/module-1/lab-web-scraping/your-code/main.ipynb
+++ b/module-1/lab-web-scraping/your-code/main.ipynb
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -793,12 +793,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 139,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Title</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>6/27/2019</td>\n",
+       "      <td>OSNA HACK 2019</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>7/5/2019</td>\n",
+       "      <td>Hackathon | Draper University</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7/12/2019</td>\n",
+       "      <td>Hack-ADA-thon – Inspired by BHS Corrugated</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>7/29/2019</td>\n",
+       "      <td>Code Geist Hackathon by SefrWahed</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5/21/2019</td>\n",
+       "      <td>The Code Factor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>9/6/2019</td>\n",
+       "      <td>TECHFEST MUNICH</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Date                                       Title\n",
+       "0  6/27/2019                              OSNA HACK 2019\n",
+       "1   7/5/2019               Hackathon | Draper University\n",
+       "2  7/12/2019  Hack-ADA-thon – Inspired by BHS Corrugated\n",
+       "3  7/29/2019           Code Geist Hackathon by SefrWahed\n",
+       "4  5/21/2019                             The Code Factor\n",
+       "5   9/6/2019                             TECHFEST MUNICH"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "res7 = req.get(url7)\n",
-    "soup7 = BeautifulSoup(res7.text, 'html.parser')"
+    "soup7 = BeautifulSoup(res7.text, 'html.parser')\n",
+    "hackatons=pd.DataFrame()\n",
+    "\n",
+    "hackatons[\"Date\"]=[\n",
+    "    s.get_text().lstrip(\"\\u2003\").rstrip(\"\\n\") for s in soup7.select('p.card-text')\n",
+    "]\n",
+    "\n",
+    "hackatons[\"Title\"]=[\n",
+    "    s.get_text() for s in soup7.select('h5.card-title')\n",
+    "]\n",
+    "\n",
+    "#???? no se como sacar city, country\n",
+    "\n",
+    "\n",
+    "hackatons\n"
    ]
   },
   {
@@ -818,22 +907,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise \n",
     "# You will need to add the account credentials to this url\n",
-    "url = 'https://twitter.com/'"
+    "url8 = 'https://twitter.com/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 190,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8022\n"
+     ]
+    }
+   ],
    "source": [
-    "#your code"
+    "user=\"elonmusk\"\n",
+    "try:\n",
+    "    res8 = req.get(url8+user)\n",
+    "    soup8 = BeautifulSoup(res8.text, 'html.parser')\n",
+    "\n",
+    "    tweets=int(soup8.select('a[data-nav=\"tweets\"] span[class=\"ProfileNav-value\"]')[0].get(\"data-count\"))\n",
+    "    print(tweets)\n",
+    "except:\n",
+    "    print(\"invalid user\")\n"
    ]
   },
   {
@@ -853,22 +958,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise \n",
     "# You will need to add the account credentials to this url\n",
-    "url = 'https://twitter.com/'"
+    "url9 = 'https://twitter.com/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 186,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27139547\n"
+     ]
+    }
+   ],
    "source": [
-    "#your code"
+    "user=\"elonmusk\"\n",
+    "try:\n",
+    "    res9 = req.get(url9+user)\n",
+    "    soup9 = BeautifulSoup(res9.text, 'html.parser')\n",
+    "\n",
+    "    followers=int(soup9.select('a[data-nav=\"followers\"] span[class=\"ProfileNav-value\"]')[0].get(\"data-count\"))\n",
+    "    print(followers)\n",
+    "except:\n",
+    "    print(\"invalid user\")\n"
    ]
   },
   {
@@ -880,21 +1001,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise\n",
-    "url = 'https://www.wikipedia.org/'"
+    "url10 = 'https://www.wikipedia.org/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 208,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['English ',\n",
+       " 'Nihongo ',\n",
+       " 'EspaÃ±ol ',\n",
+       " 'Deutsch ',\n",
+       " 'Russkiy ',\n",
+       " 'FranÃ§ais ',\n",
+       " 'Italiano ',\n",
+       " 'ZhÅ\\x8dngwÃ©n ',\n",
+       " 'PortuguÃªs ',\n",
+       " 'Polski ']"
+      ]
+     },
+     "execution_count": 208,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#your code"
+    "res10 = req.get(url10)\n",
+    "soup10 = BeautifulSoup(res10.text, 'html.parser')\n",
+    "\n",
+    "lang_arts=[\n",
+    "    s.get(\"title\").split(\"â\\x80\\x94\")[0] for s in soup10.select('div.central-featured a.link-box')\n",
+    "]\n",
+    "\n",
+    "lang_arts\n",
+    "#me falta el numero de articulos\n",
+    "\n",
+    "\n"
    ]
   },
   {
