--- a/module-1/lab-web-scraping/your-code/main.ipynb
+++ b/module-1/lab-web-scraping/your-code/main.ipynb
@@ -40,13 +40,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests as req\n",
     "from bs4 import BeautifulSoup\n",
     "import pandas as pd\n",
+    "import re\n",
     "\n",
     "# from pprint import pprint\n",
     "# from lxml import html\n",
@@ -67,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +118,7 @@
        " <h1 class=\"h3 lh-condensed\"><a href=\"/ayrat555\">Ayrat Badykov</a></h1>]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,8 +131,9 @@
     "soup.title\n",
     "soup\n",
     "\n",
-    "devs = soup.find_all('h1', {\"class\":\"h3 lh-condensed\"})\n",
-    "devs\n"
+    "\n",
+    "#devs\n",
+    "#names_hrefs = [' '.join((elem.text, elem.a.get('href'))) for elem in devs]"
    ]
   },
   {
@@ -185,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,12 +250,12 @@
     "url = 'https://github.com/trending/python?since=daily'\n",
     "res = req.get(url)\n",
     "res.text\n",
-    "soup2 = BeautifulSoup(res.text, 'html.parser')"
+    "soup2 = BeautifulSoup(res.text, 'html.parser')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +264,23 @@
      "text": [
       "\n",
       "\n",
+      "leisurelicht / wtfpython-cn\n",
+      "\n",
+      "\n",
+      "\n",
+      "soimort / you-get\n",
+      "\n",
+      "\n",
+      "\n",
       "bokeh / bokeh\n",
+      "\n",
+      "\n",
+      "\n",
+      "fox-it / cve-2019-1040-scanner\n",
+      "\n",
+      "\n",
+      "\n",
+      "spesmilo / electrum\n",
       "\n",
       "\n",
       "\n",
@@ -270,7 +288,15 @@
       "\n",
       "\n",
       "\n",
-      "celery / celery\n",
+      "dask / dask\n",
+      "\n",
+      "\n",
+      "\n",
+      "zalandoresearch / flair\n",
+      "\n",
+      "\n",
+      "\n",
+      "TheresAFewConors / Sooty\n",
       "\n",
       "\n",
       "\n",
@@ -278,23 +304,23 @@
       "\n",
       "\n",
       "\n",
-      "apache / airflow\n",
+      "docker / compose\n",
       "\n",
       "\n",
       "\n",
-      "fishtown-analytics / dbt\n",
+      "satwikkansal / wtfpython\n",
       "\n",
       "\n",
       "\n",
-      "tweepy / tweepy\n",
+      "matterport / Mask_RCNN\n",
       "\n",
       "\n",
       "\n",
-      "facebookresearch / Detectron\n",
+      "reiinakano / scikit-plot\n",
       "\n",
       "\n",
       "\n",
-      "mlflow / mlflow\n",
+      "machinelearningmindset / machine-learning-course\n",
       "\n",
       "\n",
       "\n",
@@ -302,27 +328,11 @@
       "\n",
       "\n",
       "\n",
-      "tensorflow / tensor2tensor\n",
+      "my8100 / scrapydweb\n",
       "\n",
       "\n",
       "\n",
-      "dmlc / tvm\n",
-      "\n",
-      "\n",
-      "\n",
-      "openshift / openshift-ansible\n",
-      "\n",
-      "\n",
-      "\n",
-      "python-telegram-bot / python-telegram-bot\n",
-      "\n",
-      "\n",
-      "\n",
-      "rbgirshick / py-faster-rcnn\n",
-      "\n",
-      "\n",
-      "\n",
-      "microsoft / nni\n",
+      "Neo23x0 / sigma\n",
       "\n",
       "\n",
       "\n",
@@ -330,41 +340,34 @@
       "\n",
       "\n",
       "\n",
-      "googleapis / google-cloud-python\n",
+      "microsoft / MASS\n",
       "\n",
       "\n",
       "\n",
-      "huge-success / sanic\n",
+      "tzutalin / labelImg\n",
       "\n",
       "\n",
       "\n",
-      "edx / edx-platform\n",
+      "dmlc / tvm\n",
       "\n",
       "\n",
       "\n",
-      "MobSF / Mobile-Security-Framework-MobSF\n",
+      "PySimpleGUI / PySimpleGUI\n",
       "\n",
       "\n",
       "\n",
-      "sabricot / django-elasticsearch-dsl\n",
+      "google-research / google-research\n",
       "\n",
       "\n",
       "\n",
-      "Julian / jsonschema\n",
-      "\n",
-      "\n",
-      "\n",
-      "scrapy / scrapy\n",
-      "\n",
-      "\n",
-      "\n",
-      "Neo23x0 / sigma\n",
+      "LaQuay / TDTChannels\n",
       "\n"
      ]
     }
    ],
    "source": [
     "repo = soup2.select(\"h1.h3 a\")\n",
+    "#print(repo)\n",
     "\n",
     "for e in repo:\n",
     "    print(e.text)"
@@ -379,21 +382,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise\n",
-    "url = 'https://en.wikipedia.org/wiki/Walt_Disney'"
+    "url = 'https://en.wikipedia.org/wiki/Walt_Disney'\n",
+    "res3 = req.get(url)\n",
+    "soup3 = BeautifulSoup(res3.text, \"html.parser\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "//upload.wikimedia.org/wikipedia/commons/thumb/c/c4/Walt_Disney_envelope_ca._1921.jpg/220px-Walt_Disney_envelope_ca._1921.jpg\n",
+      "\n",
+      "//upload.wikimedia.org/wikipedia/commons/thumb/4/4d/Newman_Laugh-O-Gram_%281921%29.webm/220px-seek%3D2-Newman_Laugh-O-Gram_%281921%29.webm.jpg\n",
+      "\n",
+      "//upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Trolley_Troubles_poster.jpg/170px-Trolley_Troubles_poster.jpg\n",
+      "\n",
+      "//upload.wikimedia.org/wikipedia/commons/thumb/7/71/Walt_Disney_and_his_cartoon_creation_%22Mickey_Mouse%22_-_National_Board_of_Review_Magazine.jpg/170px-Walt_Disney_and_his_cartoon_creation_%22Mickey_Mouse%22_-_National_Board_of_Review_Magazine.jpg\n",
+      "\n",
+      "//upload.wikimedia.org/wikipedia/en/thumb/4/4e/Steamboat-willie.jpg/170px-Steamboat-willie.jpg\n",
+      "\n",
+      "//upload.wikimedia.org/wikipedia/commons/thumb/5/57/Walt_Disney_1935.jpg/170px-Walt_Disney_1935.jpg\n",
+      "\n",
+      "//upload.wikimedia.org/wikipedia/commons/thumb/c/cd/Walt_Disney_Snow_white_1937_trailer_screenshot_%2813%29.jpg/220px-Walt_Disney_Snow_white_1937_trailer_screenshot_%2813%29.jpg\n",
+      "\n",
+      "//upload.wikimedia.org/wikipedia/commons/thumb/1/15/Disney_drawing_goofy.jpg/170px-Disney_drawing_goofy.jpg\n",
+      "\n",
+      "//upload.wikimedia.org/wikipedia/commons/thumb/1/13/DisneySchiphol1951.jpg/220px-DisneySchiphol1951.jpg\n",
+      "\n",
+      "//upload.wikimedia.org/wikipedia/commons/thumb/8/8c/WaltDisneyplansDisneylandDec1954.jpg/220px-WaltDisneyplansDisneylandDec1954.jpg\n",
+      "\n",
+      "//upload.wikimedia.org/wikipedia/commons/thumb/f/ff/Walt_disney_portrait_right.jpg/170px-Walt_disney_portrait_right.jpg\n",
+      "\n",
+      "//upload.wikimedia.org/wikipedia/commons/thumb/2/2d/Roy_O._Disney_with_Company_at_Press_Conference.jpg/170px-Roy_O._Disney_with_Company_at_Press_Conference.jpg\n",
+      "\n",
+      "//upload.wikimedia.org/wikipedia/commons/thumb/6/6c/Disney1968.jpg/170px-Disney1968.jpg\n",
+      "\n",
+      "//upload.wikimedia.org/wikipedia/commons/thumb/1/1a/Magic_Kingdom_castle.jpg/24px-Magic_Kingdom_castle.jpg\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "#your code"
+    "import re\n",
+    "\n",
+    "images = soup3.find_all('img', {'src':re.compile('.jpg')})\n",
+    "for image in images: \n",
+    "    print(image['src']+'\\n')\n",
+    "    \n"
    ]
   },
   {
@@ -405,21 +450,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise\n",
-    "url ='https://en.wikipedia.org/wiki/Python' "
+    "url ='https://en.wikipedia.org/wiki/Python' \n",
+    "\n",
+    "res4 = req.get(url)\n",
+    "soup4 = BeautifulSoup(res4.text, \"html.parser\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/w/index.php?title=Python&action=edit&section=1',\n",
+       " '/wiki/Pythonidae',\n",
+       " '/wiki/Python_(genus)',\n",
+       " '/w/index.php?title=Python&action=edit&section=2',\n",
+       " '/wiki/Python_(mythology)']"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#your code"
+    "\n",
+    "py = [a[\"href\"] for a in soup4.select(\"a[href]\")][15:]\n",
+    "py[:5]\n",
+    "\n",
+    "#devs\n",
+    "#names_hrefs = [' '.join((elem.text, elem.a.get('href'))) for elem in devs]"
    ]
   },
   {
@@ -431,12 +499,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise\n",
-    "url = 'http://uscode.house.gov/download/download.shtml'"
+    "url = 'http://uscode.house.gov/download/download.shtml'\n",
+    "\n",
+    "res5 = req.get(url)\n",
+    "soup5 = BeautifulSoup(res5.text, \"html.parser\")"
    ]
   },
   {
@@ -445,7 +516,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code"
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -457,21 +531,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise\n",
-    "url = 'https://www.fbi.gov/wanted/topten'"
+    "url = 'https://www.fbi.gov/wanted/topten'\n",
+    "\n",
+    "\n",
+    "res6 = req.get(url)\n",
+    "soup6 = BeautifulSoup(res6.text, \"html.parser\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "JASON DEREK BROWN\n",
+      "RAFAEL CARO-QUINTERO\n",
+      "ALEXIS FLORES\n",
+      "EUGENE PALMER\n",
+      "SANTIAGO VILLALBA MEDEROS\n",
+      "ROBERT WILLIAM FISHER\n",
+      "BHADRESHKUMAR CHETANBHAI PATEL\n",
+      "ARNOLDO JIMENEZ\n",
+      "ALEJANDRO ROSALES CASTILLO\n",
+      "YASER ABDEL SAID\n"
+     ]
+    }
+   ],
    "source": [
-    "#your code "
+    "fbi_list = soup6.select(\"h3 a\")\n",
+    "for e in fbi_list:\n",
+    "    print(e.text)"
    ]
   },
   {
